# high-tokenizer

./: .gitignore  CLAUDE.md  chatlog.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_introduction.md  02_related_work.md  02_requirements.md  03_architecture.md  03_preliminaries.md  04_implementation_spec.md  04_problem_formulation.md  05_api_specification.md  05_theoretical_framework.md  06_methodology.md  06_methodology.md.bak  07_theoretical_analysis.md  08_experimental_evaluation.md  09_discussion.md  10_conclusion.md  PROGRESS_AND_NEXT_STEPS.md  README.md  RESTRUCTURE_PLAN.md  REVIEW_CHAPTER_07.md  REVIEW_CHAPTER_08.md  REVIEW_CHAPTER_09.md  REVIEW_CHAPTER_10.md  REVIEW_SUMMARY.md
docs/bk/: 01_theoretical_foundation.md
docs/ref/: dsl_grammar.md  lean_dsl_best_practices.md  spec_system.md
high_tokenizer/: complexity_estimator.py  constraint_validator.py  domain_model.py  engines.py  inference_control.py  mdl_evaluator.py  service.py  type_preservation.py  type_system.py
lean/: SpecSystem.lean  SpecTest.lean  lake-manifest.json  lakefile.lean
lean/SpecSystem/: Basic.lean  Test.lean  Theory.lean
pipeline/codegen/: lean_gen.py  python_gen.py  smt_gen.py
pipeline/dsl/: ast.py  parser.py
pipeline/llm/: refine_loop.py
pipeline/testgen/: pytest_gen.py
scripts/: generate_from_specs.py
specs/: dsl_parser.spec  dsl_spec.spec  spec_system_core.spec
specs/high_tokenizer/: complexity_estimator.spec  constraint_validator.spec  domain_model.spec  engines.spec  inference_control.spec  mdl_evaluator.spec  type_preservation.spec  type_system.spec
(+23 files in other folders)
