[project]
name = "high-tokenizer"
version = "0.1.0"
description = "Type-theoretic dynamic compression tokenizer with formal specification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pyright>=1.1",
    "pre-commit>=4.0",
]
pipeline = [
    "z3-solver>=4.13",
    "anthropic>=0.52",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["pipeline", "high_tokenizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
